# clthreads

./: .gitmodules  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README.md  a_thread.cpp  itc_ctrl.cpp  itc_ip1q.cpp  p_thread.cpp
include/: clthreads.h
